# my-python-template

./: .pre-commit-config.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md
.github/workflows/: lint.yml  unittest.yml
src/foo/: __main__.py
test/: run_suite.py  test_foo.py  utils.py
